Version 7.x-3.7        2018-09-13
---------------------------------
- Fix implemented for apple touch icons.
- GDPR Responsive footer styles
- Fix to site title 3rd line theme setting

Version 7.x-3.6        2018-05-24
---------------------------------
- Changed footer link text per guidance from University Communications

Version 7.x-3.5        2018-05-23
---------------------------------
- Updated and reorganized footer links (GDPR compliance)

7.x-3.5-alpha1              2017-10-11
--------------------------------------
- HSDO-995 HSDO-994 Sidebar Menu fixes in vivid theme
- HSDO-1023 Updated coypright link in footer
- HSDO-1026 Limit header image to 5 MB
- HSDO-1028 expanded sidebar menu styles
- HSDO-1031 footer btn link color
- HSDO-1031 fixed footer button hover state
- Added template with modified meta tag to prevent user zoom in mobile

Version 7.x-3.4
------------------------------
josephknox: /user page styles

Version 7.x-3.3
------------------------------
josephknox: removed logo-white from bright design option
josephknox: updated dropdown and mobile menu styles for vivid

Version 7.x-3.2
------------------------------
hyperboy: Added site title theme options to accomodate the different organization signature lockups
hyperboy: Fixed incorrect header brand bar padding in mobile view
josephgknox: Added full-width block regions
josephgknox: Added vivid style in theme option

Version 7.x-3.1
------------------------------
hyperboy: Updated theme path references in template.php to accomodate sub-themes

Version 7.x-3.0
------------------------------
meganem: Added theme options for selecting Stanford Wilbur, Stanford Jordan, and custom (formerly Stanford Light) styles
meganem: Added theme option for header background image
meganem: Added theme option for front page full bleed background image with light or dark text color setting
sherakama: Added thumbnail images for previewing the custom theme option styles