@@ -2,7 +2,7 @@ name = Stanford Framework
 base theme = open_framework
 description = Use of the Stanford-branded themes is limited to Stanford University academic departments, centers, research groups, and administrative units. If your website is for a student group, please use the Stanford Light theme. Stanford-branded subtheme of <a href="http://openframework.stanford.edu">Open Framework</a>, provided by <a href="http://webservices.stanford.edu">Stanford Web Services</a>. Learn more at the <a href="http://drupalthemes.stanford.edu">Drupal Themes website</a>.
 core = 7.x
-version = 7.x-3.7
+version = 7.x-3.8
 project = "stanford_framework"
 project status url = https://github.com/SU-SWS/stanford_framework
 
